@@ -18,6 +18,7 @@ Currently C-Mode is accessed by cycling through the modes via long press on the 
 
 * The icon for splitting a selected way is now a pair of scissors.
 * Improved label rendering.
+* If a PresetFilter is filtering just on one preset item, apply that automatically when creating new elements.
 
 The full change log is available [here](https://github.com/MarcusWolschon/osmeditor4android/commits/master)
 
