@@ -9,6 +9,7 @@
 <ul>
   <li>The icon for splitting a selected way is now a pair of scissors.</li>
   <li>Improved label rendering.</li>
+  <li>If a PresetFilter is filtering just on one preset item, apply that automatically when creating new elements.</li>
 </ul><p>The full change log is available <a href="https://github.com/MarcusWolschon/osmeditor4android/commits/master">here</a></p><h1>Known problems</h1><h1>Upgrading from previous versions</h1>
 <ul>
   <li>The saved editing state file format has changed, please complete any edits before upgrading.</li>
