@@ -5,7 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 </head>
 <body>
-<h1>Preset filter</h1><p>Vespucci provides a simple mechanism to filter displayed and editable objects based on which preset that they match to. Elements that are not selectable and visible will be drawn with light grey lines.</p><p>The preset filter is enabled by selecting the corresponding menu entry in the menu on the main map display.</p><h2>Actions</h2><h3>Selecting a preset</h3><p>The preset screen can be navigated similar to the other preset selection menus:</p>
+<h1>Preset filter</h1><p>Vespucci provides a simple mechanism to filter displayed and editable objects based on which preset that they match to. Elements that are not selectable and visible will be drawn with light grey lines.</p><p>The preset filter is enabled by selecting the corresponding menu entry in the menu on the main map display.</p><p>If the filter is only using one preset item (not a group) then that preset will automatically be applied when a new object is created.</p><h2>Actions</h2><h3>Selecting a preset</h3><p>The preset screen can be navigated similar to the other preset selection menus:</p>
 <ul>
   <li>clicking a group (light grey background) will enter and display the group</li>
   <li>clicking a preset (dark grey background) will select that preset for use in the filter</li>
